# meshunwrap

./: .copier-answers.yml  .gitignore  AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: coverage.ini  mkdocs.yml  ruff.toml
config/cursor/rules/: layering.mdc
config/vscode/: launch.json
data/fixtures/meshes/: README.md  bent-pipe.npz  stanford-bunny.npz
docs/.overrides/partials/: comments.html
docs/reference/: api.md  architecture.md
make_cmds/: notebooks.mk  quality.mk  tests.mk
scripts/: gen_credits.py
src/meshunwrap/: __init__.py  __main__.py  _version.py  artifacts.py  config.py  fixtures.py  geometry.py  rendering.py  uv.py  workflow.py
src/meshunwrap/cli/: __init__.py  main_cli.py  register.py
src/meshunwrap/cli/commands/reconstruct/: __init__.py
src/meshunwrap/cli/commands/render/: __init__.py
src/meshunwrap/cli/commands/run_example/: __init__.py
src/meshunwrap/cli/commands/unwrap/: __init__.py
src/meshunwrap/cli/messages/: __init__.py  capability.py  error.py  warning.py
src/meshunwrap/config/: __init__.py  dataset_config.py  fastapi_config.py  main_config.py  rag_config.py
src/meshunwrap/utils/: logging.py  progress_bar.py
tests/: __init__.py  conftest.py  test_config.py  test_uv.py  test_version.py
tests/test_cli/: test_cli.py  test_command_registration.py  test_messages.py  test_pipeline_commands.py
tests/test_utils/: test_logging.py  test_progress_bar.py  test_theme.py
